--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,6 +1,6 @@
 .projects-body {
   padding: 3em;
-  height: 87vh;
+  /* height: 87vh; */
 }
 .projects-body h1 {
   color: rgb(0, 255, 234);
@@ -28,3 +28,16 @@
   /* box-shadow: 0px 0px 6px rgb(0, 255, 234) inset, 0px 0px 10px rgb(255, 174, 0)!important; */
 }
 
+@media screen and (max-width: 600px) {
+  .projects-body {
+    padding: 0em;
+    height: 100vh;
+  }
+  .projects-body p {
+   
+    font-size: 1rem;
+    margin: 10px!important; 
+  }
+
+
+}
